@@ -5,8 +5,8 @@ import com.comet.opik.api.Comment;
 import com.comet.opik.api.DeleteFeedbackScore;
 import com.comet.opik.api.ErrorInfo;
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreBatchContainer;
+import com.comet.opik.api.FeedbackScoreItem;
 import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.Project;
 import com.comet.opik.api.ReactServiceErrorResponse;
@@ -31,6 +31,7 @@ import com.comet.opik.api.resources.utils.MySQLContainerUtils;
 import com.comet.opik.api.resources.utils.RandomTestUtils;
 import com.comet.opik.api.resources.utils.RedisContainerUtils;
 import com.comet.opik.api.resources.utils.TestDropwizardAppExtensionUtils;
+import com.comet.opik.api.resources.utils.TestUtils;
 import com.comet.opik.api.resources.utils.WireMockUtils;
 import com.comet.opik.api.resources.utils.resources.ProjectResourceClient;
 import com.comet.opik.api.resources.utils.resources.SpanResourceClient;
@@ -76,11 +77,11 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.RandomStringUtils;
+import org.apache.commons.lang3.RandomUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpStatus;
 import org.assertj.core.api.recursive.comparison.RecursiveComparisonConfiguration;
 import org.glassfish.jersey.client.ChunkedInput;
-import org.jdbi.v3.core.Jdbi;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -132,14 +133,15 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatch;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
 import static com.comet.opik.api.Visibility.PRIVATE;
 import static com.comet.opik.api.Visibility.PUBLIC;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
+import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertComment;
 import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertComments;
-import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertTraceComment;
 import static com.comet.opik.api.resources.utils.CommentAssertionUtils.assertUpdatedComment;
 import static com.comet.opik.api.resources.utils.FeedbackScoreAssertionUtils.assertFeedbackScoreNames;
-import static com.comet.opik.api.resources.utils.MigrationUtils.CLICKHOUSE_CHANGELOG_FILE;
 import static com.comet.opik.api.resources.utils.QuotaLimitTestUtils.ERR_USAGE_LIMIT_EXCEEDED;
 import static com.comet.opik.api.resources.utils.TestHttpClientUtils.FAKE_API_KEY_MESSAGE;
 import static com.comet.opik.api.resources.utils.TestHttpClientUtils.NO_API_KEY_RESPONSE;
@@ -230,6 +232,9 @@ class SpansResourceTest {
         var databaseAnalyticsFactory = ClickHouseContainerUtils.newDatabaseAnalyticsFactory(
                 CLICK_HOUSE_CONTAINER, DATABASE_NAME);
 
+        MigrationUtils.runMysqlDbMigration(MY_SQL_CONTAINER);
+        MigrationUtils.runClickhouseDbMigration(CLICK_HOUSE_CONTAINER);
+
         APP = TestDropwizardAppExtensionUtils.newTestDropwizardAppExtension(
                 MY_SQL_CONTAINER.getJdbcUrl(), databaseAnalyticsFactory, wireMock.runtimeInfo(), REDIS.getRedisURI());
     }
@@ -245,15 +250,8 @@ class SpansResourceTest {
     private SpanResourceClient spanResourceClient;
 
     @BeforeAll
-    void setUpAll(ClientSupport client, Jdbi jdbi) throws SQLException {
-        MigrationUtils.runDbMigration(jdbi, MySQLContainerUtils.migrationParameters());
-
-        try (var connection = CLICK_HOUSE_CONTAINER.createConnection("")) {
-            MigrationUtils.runClickhouseDbMigration(connection, CLICKHOUSE_CHANGELOG_FILE,
-                    ClickHouseContainerUtils.migrationParameters());
-        }
-
-        this.baseURI = "http://localhost:%d".formatted(client.getPort());
+    void setUpAll(ClientSupport client) throws SQLException {
+        this.baseURI = TestUtils.getBaseUrl(client);
         this.client = client;
 
         ClientSupportUtils.config(client);
@@ -569,13 +567,14 @@ class SpansResourceTest {
 
             var spanId = spanResourceClient.createSpan(span, okApikey, workspaceName);
 
-            var items = PodamFactoryUtils.manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class)
+            List<FeedbackScoreBatchItem> items = PodamFactoryUtils
+                    .manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class)
                     .stream()
                     .map(item -> item.toBuilder()
                             .projectName(span.projectName())
                             .id(spanId)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var feedbackScoreBatch = FeedbackScoreBatch.builder()
                     .scores(items)
@@ -950,13 +949,14 @@ class SpansResourceTest {
 
             var spanId = spanResourceClient.createSpan(span, API_KEY, workspaceName);
 
-            var items = PodamFactoryUtils.manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class)
+            List<FeedbackScoreBatchItem> items = PodamFactoryUtils
+                    .manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class)
                     .stream()
                     .map(item -> item.toBuilder()
                             .projectName(span.projectName())
                             .id(spanId)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             var feedbackScoreBatch = FeedbackScoreBatch.builder()
                     .scores(items)
@@ -1190,22 +1190,24 @@ class SpansResourceTest {
 
         private String getValidValue(Field field) {
             return switch (field.getType()) {
-                case STRING, LIST, DICTIONARY, ENUM -> RandomStringUtils.secure().nextAlphanumeric(10);
+                case STRING, LIST, DICTIONARY, ENUM, ERROR_CONTAINER, STRING_STATE_DB ->
+                    RandomStringUtils.secure().nextAlphanumeric(10);
                 case NUMBER, FEEDBACK_SCORES_NUMBER -> String.valueOf(randomNumber(1, 10));
-                case DATE_TIME -> Instant.now().toString();
+                case DATE_TIME, DATE_TIME_STATE_DB -> Instant.now().toString();
             };
         }
 
         private String getKey(Field field) {
             return switch (field.getType()) {
-                case STRING, NUMBER, DATE_TIME, LIST, ENUM -> null;
+                case STRING, NUMBER, DATE_TIME, LIST, ENUM, ERROR_CONTAINER, STRING_STATE_DB, DATE_TIME_STATE_DB ->
+                    null;
                 case FEEDBACK_SCORES_NUMBER, DICTIONARY -> RandomStringUtils.secure().nextAlphanumeric(10);
             };
         }
 
         private String getInvalidValue(Field field) {
             return switch (field.getType()) {
-                case STRING, DICTIONARY, LIST, ENUM -> " ";
+                case STRING, DICTIONARY, LIST, ENUM, ERROR_CONTAINER, STRING_STATE_DB, DATE_TIME_STATE_DB -> " ";
                 case NUMBER, DATE_TIME, FEEDBACK_SCORES_NUMBER -> RandomStringUtils.secure().nextAlphanumeric(10);
             };
         }
@@ -1245,6 +1247,7 @@ class SpansResourceTest {
                     .flatMap(filter -> filter.getValue()
                             .stream()
                             .flatMap(operator -> switch (filter.getKey().getType()) {
+                                case STRING -> Stream.empty();
                                 case DICTIONARY, FEEDBACK_SCORES_NUMBER -> Stream.of(
                                         SpanFilter.builder()
                                                 .field(filter.getKey())
@@ -1261,6 +1264,7 @@ class SpansResourceTest {
                                                         : getKey(filter.getKey()))
                                                 .value(getInvalidValue(filter.getKey()))
                                                 .build());
+                                case ERROR_CONTAINER -> Stream.of();
                                 default -> Stream.of(SpanFilter.builder()
                                         .field(filter.getKey())
                                         .operator(operator)
@@ -1330,7 +1334,43 @@ class SpansResourceTest {
                             SpanField.PROVIDER,
                             Operator.EQUAL,
                             null,
-                            spansTestAssertion));
+                            spansTestAssertion),
+                    Arguments.of(
+                            "",
+                            SpanField.TYPE,
+                            Operator.EQUAL,
+                            "general",
+                            spansTestAssertion),
+                    Arguments.of(
+                            "",
+                            SpanField.TYPE,
+                            Operator.EQUAL,
+                            "general",
+                            statsTestAssertion),
+                    Arguments.of(
+                            "",
+                            SpanField.TYPE,
+                            Operator.EQUAL,
+                            "general",
+                            spanStreamTestAssertion),
+                    Arguments.of(
+                            "",
+                            SpanField.TYPE,
+                            Operator.NOT_EQUAL,
+                            "llm",
+                            spansTestAssertion),
+                    Arguments.of(
+                            "",
+                            SpanField.TYPE,
+                            Operator.NOT_EQUAL,
+                            "llm",
+                            statsTestAssertion),
+                    Arguments.of(
+                            "",
+                            SpanField.TYPE,
+                            Operator.NOT_EQUAL,
+                            "llm",
+                            spanStreamTestAssertion));
         }
 
         @Test
@@ -1837,6 +1877,7 @@ class SpansResourceTest {
             String apiKey = UUID.randomUUID().toString();
             String model = "gpt-3.5-turbo-1106";
             String provider = "openai";
+            SpanType spanType = SpanType.general;
 
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
@@ -1845,6 +1886,7 @@ class SpansResourceTest {
                     .stream()
                     .map(span -> span.toBuilder()
                             .projectId(null)
+                            .type(SpanType.llm)
                             .projectName(projectName)
                             .feedbackScores(null)
                             .totalEstimatedCost(null)
@@ -1855,6 +1897,7 @@ class SpansResourceTest {
 
             var expectedSpans = List.of(podamFactory.manufacturePojo(Span.class).toBuilder()
                     .projectId(null)
+                    .type(spanType)
                     .projectName(projectName)
                     .endTime(Instant.now().plusMillis(randomNumber()))
                     .provider(provider)
@@ -4184,6 +4227,7 @@ class SpansResourceTest {
                             .totalEstimatedCost(Objects.equals(sorting.field(), SortableFields.TOTAL_ESTIMATED_COST)
                                     ? BigDecimal.valueOf(randomNumber())
                                     : null)
+                            .usage(Map.of("total_tokens", RandomUtils.secure().randomInt()))
                             .createdAt(Instant.now().plusMillis(index.getAndIncrement()))
                             .lastUpdatedAt(Instant.now().plusMillis(index.getAndIncrement()))
                             .build())
@@ -4213,7 +4257,7 @@ class SpansResourceTest {
             Comparator<Span> metadataComparator = Comparator.comparing(span -> span.metadata().toString());
             Comparator<Span> tagsComparator = Comparator.comparing(span -> span.tags().toString());
             Comparator<Span> errorInfoComparator = Comparator.comparing(span -> span.errorInfo().toString());
-            Comparator<Span> usageComparator = Comparator.comparing(span -> StringUtils.join(span.usage()));
+            Comparator<Span> usageComparator = Comparator.comparing(span -> span.usage().get("total_tokens"));
 
             return Stream.of(
                     Arguments.of(Comparator.comparing(Span::id),
@@ -4259,9 +4303,9 @@ class SpansResourceTest {
                     Arguments.of(tagsComparator.reversed(),
                             SortingField.builder().field(SortableFields.TAGS).direction(Direction.DESC).build()),
                     Arguments.of(usageComparator,
-                            SortingField.builder().field(SortableFields.USAGE).direction(Direction.ASC).build()),
+                            SortingField.builder().field("usage.total_tokens").direction(Direction.ASC).build()),
                     Arguments.of(usageComparator.reversed(),
-                            SortingField.builder().field(SortableFields.USAGE).direction(Direction.DESC).build()),
+                            SortingField.builder().field("usage.total_tokens").direction(Direction.DESC).build()),
                     Arguments.of(Comparator.comparing(Span::createdAt)
                             .thenComparing(Comparator.comparing(Span::id).reversed()),
                             SortingField.builder().field(SortableFields.CREATED_AT).direction(Direction.ASC).build()),
@@ -4476,7 +4520,7 @@ class SpansResourceTest {
                             .projectName(finalSpans.get(i).projectName())
                             .id(finalSpans.get(i).id())
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             spanResourceClient.feedbackScores(scoreForSpan, apiKey, workspaceName);
 
@@ -4507,6 +4551,98 @@ class SpansResourceTest {
                     List.of(), exclude);
         }
 
+        @ParameterizedTest
+        @MethodSource("getFilterTestArguments")
+        void whenFilterErrorIsNotEmpty__thenReturnSpansFiltered(String endpoint, SpanPageTestAssertion testAssertion) {
+            String workspaceName = UUID.randomUUID().toString();
+            String workspaceId = UUID.randomUUID().toString();
+            String apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = generator.generate().toString();
+            var spans = PodamFactoryUtils.manufacturePojoList(podamFactory, Span.class)
+                    .stream()
+                    .map(span -> span.toBuilder()
+                            .projectId(null)
+                            .projectName(projectName)
+                            .totalEstimatedCost(null)
+                            .feedbackScores(null)
+                            .errorInfo(null)
+                            .build())
+                    .collect(toCollection(ArrayList::new));
+
+            spans.set(0, spans.getFirst().toBuilder()
+                    .errorInfo(podamFactory.manufacturePojo(ErrorInfo.class))
+                    .build());
+
+            spanResourceClient.batchCreateSpans(spans, apiKey, workspaceName);
+
+            var expectedSpans = List.of(spans.getFirst());
+            var unexpectedSpans = List.of(podamFactory.manufacturePojo(Span.class).toBuilder()
+                    .projectId(null)
+                    .build());
+
+            spanResourceClient.batchCreateSpans(unexpectedSpans, apiKey, workspaceName);
+
+            var filters = List.of(SpanFilter.builder()
+                    .field(SpanField.ERROR_INFO)
+                    .operator(Operator.IS_NOT_EMPTY)
+                    .value("")
+                    .build());
+
+            var values = testAssertion.transformTestParams(spans, expectedSpans, unexpectedSpans);
+
+            testAssertion.runTestAndAssert(projectName, null, apiKey, workspaceName, values.expected(),
+                    values.unexpected(),
+                    values.all(), filters, Map.of());
+        }
+
+        @ParameterizedTest
+        @MethodSource("getFilterTestArguments")
+        void whenFilterErrorIsEmpty__thenReturnSpansFiltered(String endpoint, SpanPageTestAssertion testAssertion) {
+            String workspaceName = UUID.randomUUID().toString();
+            String workspaceId = UUID.randomUUID().toString();
+            String apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = generator.generate().toString();
+            var spans = PodamFactoryUtils.manufacturePojoList(podamFactory, Span.class)
+                    .stream()
+                    .map(span -> span.toBuilder()
+                            .projectId(null)
+                            .projectName(projectName)
+                            .totalEstimatedCost(null)
+                            .feedbackScores(null)
+                            .build())
+                    .collect(toCollection(ArrayList::new));
+
+            spans.set(0, spans.getFirst().toBuilder()
+                    .errorInfo(null)
+                    .build());
+
+            spanResourceClient.batchCreateSpans(spans, apiKey, workspaceName);
+
+            var expectedSpans = List.of(spans.getFirst());
+            var unexpectedSpans = List.of(podamFactory.manufacturePojo(Span.class).toBuilder()
+                    .projectId(null)
+                    .build());
+
+            spanResourceClient.batchCreateSpans(unexpectedSpans, apiKey, workspaceName);
+
+            var filters = List.of(SpanFilter.builder()
+                    .field(SpanField.ERROR_INFO)
+                    .operator(Operator.IS_EMPTY)
+                    .value("")
+                    .build());
+
+            var values = testAssertion.transformTestParams(spans, expectedSpans, unexpectedSpans);
+
+            testAssertion.runTestAndAssert(projectName, null, apiKey, workspaceName, values.expected(),
+                    values.unexpected(),
+                    values.all(), filters, Map.of());
+        }
     }
 
     private void getAndAssertPage(
@@ -4678,7 +4814,7 @@ class SpansResourceTest {
                             null, null),
                     Arguments.of(Map.of("completion_tokens", Math.abs(podamFactory.manufacturePojo(Integer.class)),
                             "prompt_tokens", Math.abs(podamFactory.manufacturePojo(Integer.class))),
-                            "claude-3-sonnet-20240229", "anthropic",
+                            "claude-3-5-haiku-latest", "anthropic",
                             null, null),
                     Arguments.of(Map.of("completion_tokens", Math.abs(podamFactory.manufacturePojo(Integer.class)),
                             "prompt_tokens", Math.abs(podamFactory.manufacturePojo(Integer.class))),
@@ -6154,28 +6290,32 @@ class SpansResourceTest {
                     arguments(FeedbackScoreBatch.builder().scores(
                             IntStream.range(0, 1001)
                                     .mapToObj(
-                                            __ -> podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                                            __ -> podamFactory.manufacturePojo(FeedbackScoreBatchItem.class)
+                                                    .toBuilder()
                                                     .projectName(DEFAULT_PROJECT).build())
-                                    .toList())
+                                    .collect(Collectors.toList()))
                             .build(), "scores size must be between 1 and 1000"),
                     arguments(
                             FeedbackScoreBatch.builder()
                                     .scores(List
-                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class)
+                                                    .toBuilder()
                                                     .projectName(DEFAULT_PROJECT).name(null).build()))
                                     .build(),
                             "scores[0].name must not be blank"),
                     arguments(
                             FeedbackScoreBatch.builder()
                                     .scores(List
-                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class)
+                                                    .toBuilder()
                                                     .projectName(DEFAULT_PROJECT).name("").build()))
                                     .build(),
                             "scores[0].name must not be blank"),
                     arguments(
                             FeedbackScoreBatch.builder()
                                     .scores(List
-                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class)
+                                                    .toBuilder()
                                                     .projectName(DEFAULT_PROJECT).value(null).build()))
                                     .build(),
                             "scores[0].value must not be null"),
@@ -6191,7 +6331,8 @@ class SpansResourceTest {
                     arguments(
                             FeedbackScoreBatch.builder()
                                     .scores(List
-                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                                            .of(podamFactory.manufacturePojo(FeedbackScoreBatchItem.class)
+                                                    .toBuilder()
                                                     .projectName(DEFAULT_PROJECT)
                                                     .value(new BigDecimal(MAX_FEEDBACK_SCORE_VALUE).add(BigDecimal.ONE))
                                                     .build()))
@@ -6237,7 +6378,8 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score, score2, score3))))) {
+                    .put(Entity.json(
+                            FeedbackScoreBatch.builder().scores(List.of(score, score2, score3)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
                 assertThat(actualResponse.hasEntity()).isFalse();
@@ -6299,7 +6441,8 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, apiKey)
                     .header(WORKSPACE_HEADER, workspaceName)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score, score2, score3))))) {
+                    .put(Entity.json(
+                            FeedbackScoreBatch.builder().scores(List.of(score, score2, score3)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
                 assertThat(actualResponse.hasEntity()).isFalse();
@@ -6319,7 +6462,8 @@ class SpansResourceTest {
         @ParameterizedTest
         @MethodSource("invalidRequestBodyParams")
         @DisplayName("when batch request is invalid, then return bad request")
-        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatch batch, String errorMessage) {
+        void feedback__whenBatchRequestIsInvalid__thenReturnBadRequest(FeedbackScoreBatchContainer batch,
+                String errorMessage) {
 
             try (var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
                     .path("feedback-scores")
@@ -6356,7 +6500,7 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
                 assertThat(actualResponse.hasEntity()).isFalse();
@@ -6389,7 +6533,7 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
                 assertThat(actualResponse.hasEntity()).isFalse();
@@ -6422,7 +6566,7 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
                 assertThat(actualResponse.hasEntity()).isFalse();
@@ -6434,7 +6578,7 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(newScore))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(newScore)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
                 assertThat(actualResponse.hasEntity()).isFalse();
@@ -6461,7 +6605,7 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(204);
                 assertThat(actualResponse.hasEntity()).isFalse();
@@ -6483,7 +6627,7 @@ class SpansResourceTest {
                     .request()
                     .header(HttpHeaders.AUTHORIZATION, API_KEY)
                     .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .put(Entity.json(new FeedbackScoreBatch(List.of(score))))) {
+                    .put(Entity.json(FeedbackScoreBatch.builder().scores(List.of(score)).build()))) {
 
                 assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
                 assertThat(actualResponse.hasEntity()).isTrue();
@@ -6502,12 +6646,12 @@ class SpansResourceTest {
 
             var id = spanResourceClient.createSpan(expectedSpan, API_KEY, TEST_WORKSPACE);
 
-            var scores = IntStream.range(0, 1000)
+            List<FeedbackScoreBatchItem> scores = IntStream.range(0, 1000)
                     .mapToObj(__ -> podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
                             .projectName(DEFAULT_PROJECT)
                             .id(id)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             spanResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
         }
@@ -6531,18 +6675,18 @@ class SpansResourceTest {
 
             spanResourceClient.batchCreateSpans(spans, API_KEY, TEST_WORKSPACE);
 
-            var scores = spans.stream()
+            List<FeedbackScoreBatchItem> scores = spans.stream()
                     .map(span -> podamFactory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
                             .id(span.id())
                             .projectName(projectNameModifier.apply(projectName))
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
 
             spanResourceClient.feedbackScores(scores, API_KEY, TEST_WORKSPACE);
 
             var expectedSpansWithScores = spans.stream()
                     .map(span -> {
-                        FeedbackScoreBatchItem feedbackScoreBatchItem = scores.stream()
+                        FeedbackScoreItem feedbackScoreBatchItem = scores.stream()
                                 .filter(score -> score.id().equals(span.id()))
                                 .findFirst()
                                 .orElseThrow();
@@ -6561,7 +6705,7 @@ class SpansResourceTest {
         }
     }
 
-    private FeedbackScore mapFeedbackScore(FeedbackScoreBatchItem feedbackScoreBatchItem) {
+    private FeedbackScore mapFeedbackScore(FeedbackScoreItem feedbackScoreBatchItem) {
         return FeedbackScore.builder()
                 .name(feedbackScoreBatchItem.name())
                 .value(feedbackScoreBatchItem.value())
@@ -6592,7 +6736,7 @@ class SpansResourceTest {
             // Get created comment by id and assert
             Comment actualComment = spanResourceClient.getCommentById(expectedComment.id(), spanId, API_KEY,
                     TEST_WORKSPACE, 200);
-            assertTraceComment(expectedComment, actualComment);
+            assertComment(expectedComment, actualComment);
         }
 
         @Test
@@ -6794,7 +6938,7 @@ class SpansResourceTest {
                                     .projectName(project.name())
                                     .id(span.id())
                                     .build())
-                            .toList();
+                            .collect(Collectors.toList());
 
                     spanResourceClient.feedbackScores(scores, apiKey, workspaceName);
 
